--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+title: "GOLDENDOODLES"
+date: 2020-09-01
+---
+
 title: Goldendoodles
 author: Avery Elliott
 email: averyhopeelliott@gmail.com
