--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
----
-title: "GOLDENDOODLES"
-date: 2020-09-01
----
+title: Goldendoodles
 author: Avery Elliott
 email: averyhopeelliott@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
